# mujoco_ws

./: .gitignore  CLAUDE.md  README.md  mujoco-3.4.0  setup.sh
.claude/agents/: uav-sim-expert.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/acp_mujoco_simulator/share/acp_mujoco_simulator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/acp_mujoco_simulator/share/acp_mujoco_simulator/cmake/: acp_mujoco_simulatorConfig-version.cmake  acp_mujoco_simulatorConfig.cmake
install/acp_mujoco_simulator/share/acp_mujoco_simulator/environment/: ament_prefix_path.dsv  path.dsv
install/acp_mujoco_simulator/share/acp_mujoco_simulator/model/: humanoid_macro.xml.xacro  quadrotor_acro_macro.xml.xacro  quadrotor_lowlevel_macro.xml.xacro  quadrotor_so3_macro.xml.xacro  quadrotor_verify_mass_inertia.xml  read_mujoco.py  scene.xml.xacro  scene_acro.xml.xacro  scene_acro_humanoid.xml.xacro  scene_lowlevel.xml.xacro  scene_so3.xml.xacro
install/drone_teleop/lib/drone_teleop/: teleop
install/drone_teleop/share/drone_teleop/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/drone_teleop/share/drone_teleop/launch/: mujoco_only.launch.py
install/mujoco_ros_utils/lib/pkgconfig/: mujoco_ros_utils.pc
install/mujoco_ros_utils/share/mujoco_ros_utils/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mujoco_ros_utils/share/mujoco_ros_utils/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_mujoco_ros_utils__rosidl_generator_cExport-noconfig.cmake  export_mujoco_ros_utils__rosidl_generator_cExport.cmake  (+10 more)
install/mujoco_ros_utils/share/xml/: sample_mujoco_ros_utils.xml
install/quadrotor_msgs/share/quadrotor_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/: README.md  paper_v2.md
src/MujocoRosUtils/: CMakeLists.txt  README.md  drone_payload.xml
src/MujocoRosUtils/plugin/: AcroMode.cpp  AcroMode.h  CMakeLists.txt  CollisionPublisher.cpp  CollisionPublisher.h  ExternalForce.cpp  ImuPublisher.cpp  ImuPublisher.h  LowLevelMode.cpp  LowLevelMode.h  OdometryPublisher.cpp  OdometryPublisher.h  PathVisualizer.cpp  PathVisualizer.h  Plugin.cpp  PosePublisher.cpp  So3Mode.cpp  So3Mode.h  WrenchToActuators.cpp  WrenchToActuators.h  headless_runner.cpp
src/acp_mujoco_simulator/: CMakeLists.txt  README.md
src/acp_mujoco_simulator/model/: humanoid_macro.xml.xacro  quadrotor_acro_macro.xml.xacro  quadrotor_acro_macro_motors.xml.xacro  quadrotor_lowlevel_macro.xml.xacro  quadrotor_so3_macro.xml.xacro  quadrotor_verify_mass_inertia.xml  read_mujoco.py  scene.xml.xacro  scene_acro.xml.xacro  scene_acro_humanoid.xml.xacro  scene_acro_motors.xml.xacro  scene_acro_motors_nowall.xml.xacro  scene_lowlevel.xml.xacro  scene_so3.xml.xacro
src/acp_mujoco_simulator/model/humanoid_resource/: g1_12dof.xml  g1_27dof.xml  g1_29dof.xml  g1_29dof_left.xml  g1_29dof_right.xml  g1_gear_wbc.xml  read_mujoco.py
src/drone_teleop/: package.xml  setup.cfg  setup.py
src/drone_teleop/drone_teleop/: headless_runner.py  reset_sim.py  teleop.py
src/drone_teleop/launch/: mujoco_headless.launch.py  mujoco_only.launch.py
src/drone_teleop/scripts/: mujoco_launch.sh
src/quadrotor_msgs/: CMakeLists.txt
src/quadrotor_msgs/cmake/: ROS1.cmake  ROS2.cmake
src/quadrotor_msgs/msg_ros1/: FMCommand.msg  FlatOutputs.msg  MotorSpeed.msg  PositionCommand.msg  RPMCommand.msg  TRPYCommand.msg  TrajectoryPoint.msg  cuboid_map.msg  localSS.msg
src/quadrotor_msgs/msg_ros2/: Serial.msg
src/quadrotor_msgs/msg_ros2/control_cmds/: BetaFlightOnboardControl.msg  FMCommand.msg  MotorSpeed.msg  PositionCommand.msg  RPMCommand.msg  TRPYCommand.msg  TrajectoryPoint.msg
src/quadrotor_msgs/msg_ros2/planner_goals/: LissaPlannerGoal.msg  PlannerGoal.msg
(+610 files in other folders)
