<?xml version="1.0"?>
<package format="3">
  <name>drone_teleop</name>
  <version>0.1.0</version>
  <description>Paquete aislado para controlar el quadrotor en MuJoCo sin NMPC. Solo MuJoCo + controlador PD simple + CLI interactivo.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>acp_mujoco_simulator</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
